--- a/app/src/main/res/layout/fragment_permission.xml
+++ b/app/src/main/res/layout/fragment_permission.xml
@@ -12,6 +12,9 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         tools:context=".PermissionFragment">
 
         <ImageView
