--- a/app/src/main/res/layout/fragment_permission.xml
+++ b/app/src/main/res/layout/fragment_permission.xml
@@ -12,7 +12,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".PermissionFragment">
+        tools:context=".ui.permission.PermissionFragment">
 
         <ImageView
             android:id="@+id/welcome_imageview"
