design result fragment

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -25,7 +25,9 @@
             android:id="@+id/action_mapsFragment_to_resultFragment"
             app:destination="@id/resultFragment" />
     </fragment>
-    <fragment
+
+<!--    todo 2 design result fragment (next ResultFragment)-->
+    <dialog
         android:id="@+id/resultFragment"
         android:name="com.android.distancetrackerapp.ui.result.ResultFragment"
         android:label="fragment_result"
@@ -33,5 +35,5 @@
         <action
             android:id="@+id/action_resultFragment_to_mapsFragment"
             app:destination="@id/mapsFragment" />
-    </fragment>
+    </dialog>
 </navigation>
